# Elaphos-Animation-Toolkit

./: Cargo.toml  README.md
assets/3d_models/: Earth Hologram.gltf
assets/fonts/thinoo/: readme.txt
examples/: 3d.rs  slideshow.rs
src/: animation.rs  change_background.rs  fade.rs  lib.rs  main.rs  material_interaction.rs  movement.rs
