[package]
name = "elaphos"
version = "0.1.1"
edition = "2021"
description = "An animation framework for bevy"
license = "GPL-3.0"
keywords = ["animation", "video-production"]
repository = "https://github.com/Iaphetes/Elaphos-Animation-Toolkit"
homepage = "https://github.com/Iaphetes/Elaphos-Animation-Toolkit"


[dependencies]
bevy = { version = "0.10.1", features = ["dynamic_linking"]}
[[example]]
name = "slideshow"
path = "examples/slideshow.rs"
[[example]]
name = "3d"
path = "examples/3d.rs"